--- a/Sol_ME.ipynb
+++ b/Sol_ME.ipynb
@@ -1679,7 +1679,7 @@
         "import matplotlib.pyplot as plt\n",
         "plt.plot(hist.history['root_mean_squared_error'])\n",
         "plt.plot(hist.history['val_root_mean_squared_error'])\n",
-        "plt.title('Model loss')\n",
+        "plt.title('Model RMSE')\n",
         "plt.ylabel('Loss')\n",
         "plt.xlabel('Epoch')\n",
         "plt.legend(['Train', 'Val'], loc='upper right')\n",
@@ -1866,7 +1866,7 @@
       "collapsed_sections": [],
       "name": "Sol_ME.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNDzOqB1I6KKH+wMforHZ8E",
+      "authorship_tag": "ABX9TyOdLxKsiPPk/exwpzPiSfIC",
       "include_colab_link": true
     },
     "kernelspec": {
