--- a/CID_to_Fingerprint.ipynb
+++ b/CID_to_Fingerprint.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1nFuh8F_yuOufIUUqaID3iB1IuDWr8lan",
-      "authorship_tag": "ABX9TyPh8dZh8oLqzYADnnqb2dZe",
+      "authorship_tag": "ABX9TyNOvlSEbctOer7H619cNtfs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +97,7 @@
         "#df1 = df.iloc[0:775,:]\n",
         "#print(df1)\n",
         "\n",
-        "cidvals = df1['CARRIER']\n",
+        "cidvals = df1['CID']\n",
         "componentFingerprint = []\n",
         "for cid in cidvals:\n",
         "  c = pcp.Compound.from_cid(cid)\n",
