--- a/Sol_ME_LogP.ipynb
+++ b/Sol_ME_LogP.ipynb
@@ -5341,9 +5341,11 @@
         "#LOGP of DRUG AND CARRIER\n",
         "logp_D = pcp.Compound.from_cid(Drug_CID)\n",
         "logp_D = logp_D.xlogp\n",
+        "logp_D = logp_D/100\n",
         "\n",
         "logp_C = pcp.Compound.from_cid(Excipient_CID)\n",
         "logp_C = logp_C.xlogp\n",
+        "logp_C = logp_C/100\n",
         "\n",
         "#FINGERPRINT OF DRUG AND CARRIER\n",
         "CID_D = pcp.Compound.from_cid(Drug_CID)\n",
@@ -5391,7 +5393,7 @@
       "collapsed_sections": [],
       "name": "Sol_ME.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPOqfG7kK5EeN4/cjid3Bq0",
+      "authorship_tag": "ABX9TyN1Nyd+oALbjD/MpJG4qKi5",
       "include_colab_link": true
     },
     "kernelspec": {
