--- a/Sol_ME_LogP.ipynb
+++ b/Sol_ME_LogP.ipynb
@@ -56,11 +56,11 @@
         "print(dataset)"
       ],
       "metadata": {
-        "id": "pwFuJMj72rkO",
-        "outputId": "4114780a-681d-4521-ea8d-409a6e8fd5ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pwFuJMj72rkO",
+        "outputId": "4114780a-681d-4521-ea8d-409a6e8fd5ea"
       },
       "execution_count": 11,
       "outputs": [
@@ -88,7 +88,7 @@
       "outputs": [],
       "source": [
         "X1 = dataset[:,0:1]/100\n",
-        "X2 = dataset[:,1:2]\n",
+        "X2 = dataset[:,1:2]/100\n",
         "X3 = dataset[:,2:1764]\n",
         "X = np.concatenate((X1, X2, X3), axis=1)\n",
         "\n",
@@ -99,7 +99,8 @@
         "#Y = np.log(Y) \n",
         "#print(X, X.shape,X.dtype)\n",
         "#print(Y, Y.shape, Y.dtype)\n",
-        "print(X, X.shape)"
+        "#print(X, X.shape,Y, Y.shape)\n",
+        "print(pd.DataFrame(X).head)"
       ]
     },
     {
@@ -369,7 +370,7 @@
       "collapsed_sections": [],
       "name": "Sol_ME.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOaV5k5AyMxH/EMzz3TJwUP",
+      "authorship_tag": "ABX9TyN0IX9WrDuciTYUHYWa6SoX",
       "include_colab_link": true
     },
     "kernelspec": {
