--- a/Sol_ME_LogP.ipynb
+++ b/Sol_ME_LogP.ipynb
@@ -87,7 +87,7 @@
       },
       "outputs": [],
       "source": [
-        "X1 = dataset[:,0:1]/100\n",
+        "X1 = dataset[:,0:1]/100 #(standardize wiht 100)\n",
         "X2 = dataset[:,1:2]/100\n",
         "X3 = dataset[:,2:1764]\n",
         "X = np.concatenate((X1, X2, X3), axis=1)\n",
@@ -305,11 +305,11 @@
         "import time as tm\n",
         "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
         "\n",
-        "#gdd.download_file_from_google_drive(file_id='1TG-Ati7Za3NUUMP48kPiCoydanpjYCBI',\n",
-        " #                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
-        "  #                                  unzip=False)\n",
-        "#Load Model\n",
-        "#model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
+        "gdd.download_file_from_google_drive(file_id='1TG-Ati7Za3NUUMP48kPiCoydanpjYCBI',\n",
+        "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
+        "                                   unzip=False)\n",
+        "Load Model\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
         "\n",
         "\n",
         "Drug_CID =  24872560#@param {type:\"number\"}\n",
@@ -370,7 +370,7 @@
       "collapsed_sections": [],
       "name": "Sol_ME.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNmSenhzJ34M+ZguqCyg58H",
+      "authorship_tag": "ABX9TyNvIUWnrmp+iOY+HWWedkhA",
       "include_colab_link": true
     },
     "kernelspec": {
