--- a/CID_to_VALUES.ipynb
+++ b/CID_to_VALUES.ipynb
@@ -18,7 +18,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DUGN-gXm3qEj",
-        "outputId": "427c0381-11b3-422e-c292-477bac392fe7"
+        "outputId": "fe8da24f-3a0b-4121-c392-5a6d382a5d06"
       },
       "outputs": [
         {
@@ -30,7 +30,7 @@
             "  Downloading PubChemPy-1.0.4.tar.gz (29 kB)\n",
             "Building wheels for collected packages: pubchempy\n",
             "  Building wheel for pubchempy (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pubchempy: filename=PubChemPy-1.0.4-py3-none-any.whl size=13834 sha256=6ae238374ca71bd8ecbc090ba94341fed4c66d05647abbcb95afe71153582c4c\n",
+            "  Created wheel for pubchempy: filename=PubChemPy-1.0.4-py3-none-any.whl size=13834 sha256=eec85474bae5e2868e3079a5e5cf7a07552afaca10534a30ec9a5cdda4443c85\n",
             "  Stored in directory: /root/.cache/pip/wheels/7c/3d/8c/8192697412e9899dc55bbbb08bbc1197bef333caaa2a71c448\n",
             "Successfully built pubchempy\n",
             "Installing collected packages: pubchempy\n",
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "fbrl7Zj23v8F"
       },
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "FCYqBt0i4EHZ"
       },
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "qiQFST9n606c"
       },
@@ -381,13 +381,64 @@
         "\n",
         "df2.to_csv('Drug_FP.csv')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**CID TO MOL. WT**"
+      ],
+      "metadata": {
+        "id": "i3L8HyuN8fN6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#FOR DRUGS\n",
+        "\n",
+        "df1 = pd.read_csv('/content/Data_FP_7.csv')\n",
+        "#df1 = df.iloc[0:775,:]\n",
+        "#print(df1)\n",
+        "\n",
+        "cidvals = df1['CARRIER']\n",
+        "componentFingerprint = []\n",
+        "for cid in cidvals:\n",
+        "  c = pcp.Compound.from_cid(cid)\n",
+        "  componentFingerprint.append(c.molecular_weight)\n",
+        "  tm.sleep(0.1)\n",
+        "\n",
+        "df2 = df1.assign(fp=componentFingerprint)\n",
+        "i = 1\n",
+        "for  componentFingerprint in c.cactvs_fingerprint:\n",
+        "    df2['fp'] = df2['fp'].astype(str)\n",
+        "    df2['fp'+str (i)] = df2['fp'].str[i-1:i]\n",
+        "    i = i+ 1\n",
+        "#print(componentFingerprint)\n",
+        "#print(df2)\n",
+        "\n",
+        "df2.to_csv('Carrier_mw.csv')"
+      ],
+      "metadata": {
+        "id": "xJIYDuoL8eH7"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "J3iyY8_OB1Qb"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "collapsed_sections": [],
       "provenance": [],
-      "authorship_tag": "ABX9TyNWeyJF90Gj8tSpsL5JHKKL",
+      "authorship_tag": "ABX9TyNh5sRTqzt4BNJVYpLordHE",
       "include_colab_link": true
     },
     "kernelspec": {
