--- a/Sol_ME_LogP_MolWt.ipynb
+++ b/Sol_ME_LogP_MolWt.ipynb
@@ -5374,26 +5374,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "j7h6tGeSEZ3S",
-        "cellView": "form",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c6e5a888-b9b6-412b-d2ae-ca9e5a4ee0ad"
+        "cellView": "form"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: pubchempy in /usr/local/lib/python3.7/dist-packages (1.0.4)\n",
-            "[[65.48132]] mg/ml\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#@title Insert PubChem Fingerprint of Drug and Carrier (Oil, Surfactant, Cosurfactant)\n",
         "!pip install pubchempy\n",
@@ -5408,11 +5394,11 @@
         "import time as tm\n",
         "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
         "\n",
-        "#gdd.download_file_from_google_drive(file_id='1MCliug6UbT5YIrx1Jhs5J7HUO9LTsKEA',\n",
-        " #                                  dest_path='/content/sample_data/Sol_ME.hdf5',\n",
-        "  #                                 unzip=False)\n",
+        "gdd.download_file_from_google_drive(file_id='1V3huUfnkHZ0ijJbLtQX11WBGW_xfApjk',\n",
+        "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
+        "                                   unzip=False)\n",
         "#Load Model\n",
-        "#model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
         "\n",
         "\n",
         "Drug_CID =  24872560#@param {type:\"number\"}\n",
@@ -5470,26 +5456,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "_h9o-CpSkx_R",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "62f40c89-d7bd-4952-ca82-41df277f18f7"
+        "id": "_h9o-CpSkx_R"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: pubchempy in /usr/local/lib/python3.7/dist-packages (1.0.4)\n",
-            "[[76.725586]] mg/ml\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#@title Insert PubChem Fingerprint of Drug and Carrier (Oil, Surfactant, Cosurfactant)\n",
         "!pip install pubchempy\n",
@@ -5504,11 +5476,11 @@
         "import time as tm\n",
         "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
         "\n",
-        "#gdd.download_file_from_google_drive(file_id='1MCliug6UbT5YIrx1Jhs5J7HUO9LTsKEA',\n",
-        " #                                  dest_path='/content/sample_data/Sol_ME.hdf5',\n",
-        "  #                                 unzip=False)\n",
+        "gdd.download_file_from_google_drive(file_id='1V3huUfnkHZ0ijJbLtQX11WBGW_xfApjk',\n",
+        "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
+        "                                   unzip=False)\n",
         "#Load Model\n",
-        "#model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
         "\n",
         "\n",
         "Drug_CID =  24872560#@param {type:\"number\"}\n",
@@ -5566,7 +5538,7 @@
       "collapsed_sections": [],
       "name": "Sol_ME.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP9hLWojKYwEgutnRwoUkPC",
+      "authorship_tag": "ABX9TyNK7WFtqYQ1vs716uo/4o7Y",
       "include_colab_link": true
     },
     "kernelspec": {
