--- a/Sol_ME_LogP_MolWt.ipynb
+++ b/Sol_ME_LogP_MolWt.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "CYDFYbE7Lwxg",
         "outputId": "5bef3942-f7c6-430b-beef-3419dcd13a5d",
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "_PkGWMn0MR2W",
         "outputId": "396667c8-bd13-4a80-9e4e-3575377b9a49",
@@ -175,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "HjBna8fTMZ44",
         "outputId": "1ce6d7e3-916a-4c8c-b234-a1f02575bc08",
@@ -216,7 +216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "gpfXKFM52New",
         "outputId": "32433503-7f98-46b9-c344-72f49be7127e",
@@ -5304,7 +5304,7 @@
       "metadata": {
         "id": "0Bz4RtOQQlGT"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5328,7 +5328,7 @@
         "id": "dEU0IEy1RelO",
         "outputId": "f36af283-21d2-49b0-cfd5-72ca8d30edd2"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5386,7 +5386,7 @@
         "id": "3K6yNNncNdqP",
         "outputId": "55e80385-ee9f-42af-e67a-743dc8abb005"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5418,7 +5418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "j7h6tGeSEZ3S",
         "cellView": "form",
@@ -5515,7 +5515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "_h9o-CpSkx_R",
@@ -5606,13 +5606,101 @@
         " \n",
         "print(Y_prediction, \"mg/ml\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title UPLOAD EXCEL (Predict.xlsx) for Multiple Prediction\n",
+        "#Uploade Predict.xlsx file\n",
+        "from google.colab import files\n",
+        "uploaded = files.upload()\n",
+        "\n",
+        "gdd.download_file_from_google_drive(file_id='1-nyzDQCzvTqDKyu9j7iXCl_GNwJ6wrw1',\n",
+        "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
+        "                                   unzip=False)\n",
+        "#Load Model\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
+        "\n",
+        "df = pd.read_excel('/content/Predict.xlsx')\n",
+        "df1 = df.iloc[:, 0:1]\n",
+        "cidvals = df1['Drug_CID']\n",
+        "componentFingerprint = []\n",
+        "for cid in cidvals:\n",
+        "  c = pcp.Compound.from_cid(cid)\n",
+        "  componentFingerprint.append(c.cactvs_fingerprint)\n",
+        "  tm.sleep(0.1)\n",
+        "\n",
+        "CD1 = df1.assign(fp=componentFingerprint)\n",
+        "i = 1\n",
+        "for  componentFingerprint in c.cactvs_fingerprint:\n",
+        "    CD1['fp'] = CD1['fp'].astype(str)\n",
+        "    CD1['fp'+str (i)] = CD1['fp'].str[i-1:i]\n",
+        "    i = i+ 1\n",
+        "#print(componentFingerprint)\n",
+        "#print(CD1)\n",
+        "\n",
+        "# CID to Fingerprint: Second Drug\n",
+        "df = pd.read_excel('/content/Predict.xlsx')\n",
+        "df2 = df.iloc[:, 1:2]\n",
+        "cidvals = df2['Excipient_CID']\n",
+        "componentFingerprint = []\n",
+        "for cid in cidvals:\n",
+        "  c = pcp.Compound.from_cid(cid)\n",
+        "  componentFingerprint.append(c.cactvs_fingerprint)\n",
+        "  tm.sleep(0.1)\n",
+        "\n",
+        "CD2 = df2.assign(fp=componentFingerprint)\n",
+        "i = 1\n",
+        "for  componentFingerprint in c.cactvs_fingerprint:\n",
+        "    CD2['fp'] = CD2['fp'].astype(str)\n",
+        "    CD2['fp'+str (i)] = CD2['fp'].str[i-1:i]\n",
+        "    i = i+ 1\n",
+        "#print(componentFingerprint)\n",
+        "#print(CD2)\n",
+        "\n",
+        "CID= pd.DataFrame(pd.concat([CD1,CD2], axis = 1)) # Two CID Joined\n",
+        "CID_Data = CID.drop(['Drug_CID', 'fp','Excipient_CID'], axis=1, inplace = False)\n",
+        "LogP_&_MW = df.iloc[:, 2:6]\n",
+        "\n",
+        "X_Predict = pd.DataFrame(pd.concat([CID_Data, LogP_&_MW],axis = 1))\n",
+        "\n",
+        "X_Predict = (dataset1[:,0:1766].astype(float))\n",
+        "#print(X_Predict)\n",
+        "#print(X_Predict.shape)\n",
+        "#print(X_Predict.dtype)\n",
+        " \n",
+        "Y_prediction = model.predict(X_Predict)\n",
+        " \n",
+        "print(Y_prediction, \"mg/ml\")\n",
+        "\n",
+        "#@title Download Results in Excel\n",
+        "result = pd.DataFrame(Y_prediction)\n",
+        "Intact = pd.DataFrame(pd.concat([df1,df2,result], axis = 1))\n",
+        "Intact.to_excel(\"Solubility_Result.xlsx\")\n",
+        "files.download('SOlubility_Result.xlsx')"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "JjRTPb4AVKUf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "t2SBJtNjX9T6"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "name": "Sol_ME.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPbWAuxVyCFnZy70A6Z7fVw",
+      "authorship_tag": "ABX9TyPeLpmiteDqa4g/8UaKHqnA",
       "include_colab_link": true
     },
     "kernelspec": {
