--- a/Sol_ME_LogP_MolWt.ipynb
+++ b/Sol_ME_LogP_MolWt.ipynb
@@ -5421,24 +5421,9 @@
       "execution_count": null,
       "metadata": {
         "id": "j7h6tGeSEZ3S",
-        "cellView": "form",
-        "outputId": "dc19c552-1af7-49fb-8f01-d015f4991575",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "cellView": "form"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: pubchempy in /usr/local/lib/python3.8/dist-packages (1.0.4)\n",
-            "1/1 [==============================] - 0s 71ms/step\n",
-            "[[144.92984]] mg/ml\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#@title Insert PubChem Fingerprint of Drug and Carrier (Oil, Surfactant, Cosurfactant)\n",
         "!pip install pubchempy\n",
@@ -5518,25 +5503,9 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "_h9o-CpSkx_R",
-        "outputId": "3cd190f7-7d25-4d0e-aff3-4e63ae028d19",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "_h9o-CpSkx_R"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: pubchempy in /usr/local/lib/python3.8/dist-packages (1.0.4)\n",
-            "Downloading 1-nyzDQCzvTqDKyu9j7iXCl_GNwJ6wrw1 into /content/sample_data/Sol_ME.hdf5... Done.\n",
-            "1/1 [==============================] - 0s 150ms/step\n",
-            "[[150.39745]] mg/ml\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#@title Insert PubChem Fingerprint of Drug and Carrier (Oil, Surfactant, Cosurfactant)\n",
         "!pip install pubchempy\n",
@@ -5612,6 +5581,17 @@
       "source": [
         "#@title UPLOAD EXCEL (Predict.xlsx) for Multiple Prediction\n",
         "#Uploade Predict.xlsx file\n",
+        "!pip install pubchempy\n",
+        "import tensorflow as tf\n",
+        "import pandas as pd \n",
+        "import numpy as np \n",
+        "import io\n",
+        "from tensorflow import keras\n",
+        "import pubchempy as pcp\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from keras.models import load_model\n",
+        "import time as tm\n",
+        "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
         "from google.colab import files\n",
         "uploaded = files.upload()\n",
         "\n",
@@ -5660,14 +5640,13 @@
         "\n",
         "CID= pd.DataFrame(pd.concat([CD1,CD2], axis = 1)) # Two CID Joined\n",
         "CID_Data = CID.drop(['Drug_CID', 'fp','Excipient_CID'], axis=1, inplace = False)\n",
-        "LogP_&_MW = df.iloc[:, 2:6]\n",
+        "OTHER = df.iloc[:, 2:6]\n",
         "\n",
-        "X_Predict = pd.DataFrame(pd.concat([CID_Data, LogP_&_MW],axis = 1))\n",
+        "X_Predict = pd.DataFrame(pd.concat([CID_Data, OTHER],axis = 1))\n",
         "\n",
-        "X_Predict = (dataset1[:,0:1766].astype(float))\n",
-        "#print(X_Predict)\n",
-        "#print(X_Predict.shape)\n",
-        "#print(X_Predict.dtype)\n",
+        "X_Predict = X_Predict.values\n",
+        "#X_Predict.dtype = int\n",
+        "X_Predict = (X_Predict[:,0:1766].astype(float))\n",
         " \n",
         "Y_prediction = model.predict(X_Predict)\n",
         " \n",
@@ -5677,20 +5656,11 @@
         "result = pd.DataFrame(Y_prediction)\n",
         "Intact = pd.DataFrame(pd.concat([df1,df2,result], axis = 1))\n",
         "Intact.to_excel(\"Solubility_Result.xlsx\")\n",
-        "files.download('SOlubility_Result.xlsx')"
+        "files.download('Solubility_Result.xlsx')"
       ],
       "metadata": {
         "cellView": "form",
         "id": "JjRTPb4AVKUf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "t2SBJtNjX9T6"
       },
       "execution_count": null,
       "outputs": []
@@ -5700,7 +5670,7 @@
     "colab": {
       "name": "Sol_ME.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPeLpmiteDqa4g/8UaKHqnA",
+      "authorship_tag": "ABX9TyNZ8PK5Y6Ox26fr240T4kNl",
       "include_colab_link": true
     },
     "kernelspec": {
