--- a/Sol_ME_LogP_MolWt.ipynb
+++ b/Sol_ME_LogP_MolWt.ipynb
@@ -5664,13 +5664,22 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For Downloading Predict.xlsx [CLICK HERE](https://github.com/Swayamprakashpatel/Sol_ME/raw/main/Predict.xlsx) "
+      ],
+      "metadata": {
+        "id": "gyEZaxf7eY6j"
+      }
     }
   ],
   "metadata": {
     "colab": {
       "name": "Sol_ME.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNZ8PK5Y6Ox26fr240T4kNl",
+      "authorship_tag": "ABX9TyPjBJgCOcHKJPGkbOwpZDB+",
       "include_colab_link": true
     },
     "kernelspec": {
