--- a/Sol_ME_Predict.ipynb
+++ b/Sol_ME_Predict.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6PhLp8Axm93z+SEc+ogWx",
+      "authorship_tag": "ABX9TyM1pZNeLIB4X/LYFuon7Evh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -195,6 +195,104 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title UPLOAD EXCEL (Predict.xlsx) for Multiple Prediction\n",
+        "#Uploade Predict.xlsx file\n",
+        "!pip install pubchempy\n",
+        "import tensorflow as tf\n",
+        "import pandas as pd \n",
+        "import numpy as np \n",
+        "import io\n",
+        "from tensorflow import keras\n",
+        "import pubchempy as pcp\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from keras.models import load_model\n",
+        "import time as tm\n",
+        "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
+        "from google.colab import files\n",
+        "uploaded = files.upload()\n",
+        "\n",
+        "gdd.download_file_from_google_drive(file_id='1-nyzDQCzvTqDKyu9j7iXCl_GNwJ6wrw1',\n",
+        "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
+        "                                   unzip=False)\n",
+        "#Load Model\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
+        "\n",
+        "df = pd.read_excel('/content/Predict.xlsx')\n",
+        "df1 = df.iloc[:, 0:1]\n",
+        "cidvals = df1['Drug_CID']\n",
+        "componentFingerprint = []\n",
+        "for cid in cidvals:\n",
+        "  c = pcp.Compound.from_cid(cid)\n",
+        "  componentFingerprint.append(c.cactvs_fingerprint)\n",
+        "  tm.sleep(0.1)\n",
+        "\n",
+        "CD1 = df1.assign(fp=componentFingerprint)\n",
+        "i = 1\n",
+        "for  componentFingerprint in c.cactvs_fingerprint:\n",
+        "    CD1['fp'] = CD1['fp'].astype(str)\n",
+        "    CD1['fp'+str (i)] = CD1['fp'].str[i-1:i]\n",
+        "    i = i+ 1\n",
+        "#print(componentFingerprint)\n",
+        "#print(CD1)\n",
+        "\n",
+        "# CID to Fingerprint: Second Drug\n",
+        "df = pd.read_excel('/content/Predict.xlsx')\n",
+        "df2 = df.iloc[:, 1:2]\n",
+        "cidvals = df2['Excipient_CID']\n",
+        "componentFingerprint = []\n",
+        "for cid in cidvals:\n",
+        "  c = pcp.Compound.from_cid(cid)\n",
+        "  componentFingerprint.append(c.cactvs_fingerprint)\n",
+        "  tm.sleep(0.1)\n",
+        "\n",
+        "CD2 = df2.assign(fp=componentFingerprint)\n",
+        "i = 1\n",
+        "for  componentFingerprint in c.cactvs_fingerprint:\n",
+        "    CD2['fp'] = CD2['fp'].astype(str)\n",
+        "    CD2['fp'+str (i)] = CD2['fp'].str[i-1:i]\n",
+        "    i = i+ 1\n",
+        "#print(componentFingerprint)\n",
+        "#print(CD2)\n",
+        "\n",
+        "CID= pd.DataFrame(pd.concat([CD1,CD2], axis = 1)) # Two CID Joined\n",
+        "CID_Data = CID.drop(['Drug_CID', 'fp','Excipient_CID'], axis=1, inplace = False)\n",
+        "OTHER = df.iloc[:, 2:6]\n",
+        "\n",
+        "X_Predict = pd.DataFrame(pd.concat([CID_Data, OTHER],axis = 1))\n",
+        "\n",
+        "X_Predict = X_Predict.values\n",
+        "#X_Predict.dtype = int\n",
+        "X_Predict = (X_Predict[:,0:1766].astype(float))\n",
+        " \n",
+        "Y_prediction = model.predict(X_Predict)\n",
+        " \n",
+        "print(Y_prediction, \"mg/ml\")\n",
+        "\n",
+        "#@title Download Results in Excel\n",
+        "result = pd.DataFrame(Y_prediction)\n",
+        "Intact = pd.DataFrame(pd.concat([df1,df2,result], axis = 1))\n",
+        "Intact.to_excel(\"Solubility_Result.xlsx\")\n",
+        "files.download('Solubility_Result.xlsx')"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "6nqiQqatexaV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For Downloading Predict.xlsx [CLICK HERE](https://github.com/Swayamprakashpatel/Sol_ME/raw/main/Predict.xlsx) "
+      ],
+      "metadata": {
+        "id": "9la-fYfae0sk"
+      }
     }
   ]
 }
