--- a/CID_to_VALUES.ipynb
+++ b/CID_to_VALUES.ipynb
@@ -18,7 +18,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DUGN-gXm3qEj",
-        "outputId": "fe8da24f-3a0b-4121-c392-5a6d382a5d06"
+        "outputId": "d849b087-c2dd-4726-c5c1-11b4ce657834"
       },
       "outputs": [
         {
@@ -28,10 +28,11 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pubchempy\n",
             "  Downloading PubChemPy-1.0.4.tar.gz (29 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Building wheels for collected packages: pubchempy\n",
             "  Building wheel for pubchempy (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pubchempy: filename=PubChemPy-1.0.4-py3-none-any.whl size=13834 sha256=eec85474bae5e2868e3079a5e5cf7a07552afaca10534a30ec9a5cdda4443c85\n",
-            "  Stored in directory: /root/.cache/pip/wheels/7c/3d/8c/8192697412e9899dc55bbbb08bbc1197bef333caaa2a71c448\n",
+            "  Created wheel for pubchempy: filename=PubChemPy-1.0.4-py3-none-any.whl size=13820 sha256=a80373fec99e34d7718765f3477397b702f44504b91fc30d86971c247d29f7a3\n",
+            "  Stored in directory: /root/.cache/pip/wheels/90/7c/45/18a0671e3c3316966ef7ed9ad2b3f3300a7e41d3421a44e799\n",
             "Successfully built pubchempy\n",
             "Installing collected packages: pubchempy\n",
             "Successfully installed pubchempy-1.0.4\n"
@@ -366,7 +367,7 @@
         "cidvals = df1['CID']\n",
         "componentFingerprint = []\n",
         "for cid in cidvals:\n",
-        "  c = pcp.Compound.from_smile(cid)\n",
+        "  c = pcp.Compound.from_cid(cid)\n",
         "  componentFingerprint.append(c.cactvs_fingerprint)\n",
         "  tm.sleep(0.1)\n",
         "\n",
@@ -421,7 +422,7 @@
       "metadata": {
         "id": "xJIYDuoL8eH7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -436,9 +437,8 @@
   ],
   "metadata": {
     "colab": {
-      "collapsed_sections": [],
       "provenance": [],
-      "authorship_tag": "ABX9TyNh5sRTqzt4BNJVYpLordHE",
+      "authorship_tag": "ABX9TyPaE1h2UImJ04OpnKdtXMFJ",
       "include_colab_link": true
     },
     "kernelspec": {
