--- a/SMILE_to_Fingerprint.ipynb
+++ b/SMILE_to_Fingerprint.ipynb
@@ -16,10 +16,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 782
+          "height": 643
         },
         "id": "4wTr1BeV7l9K",
-        "outputId": "0a4a8d11-cd7c-4583-db52-0b62d3acde08"
+        "outputId": "d6840f81-b4c6-454c-94a4-c29f3af03c8b"
       },
       "outputs": [
         {
@@ -27,47 +27,39 @@
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: padelpy in /usr/local/lib/python3.10/dist-packages (0.1.14)\n",
-            "--2023-05-11 08:26:36--  https://github.com/dataprofessor/padel/raw/main/fingerprints_xml.zip\n",
-            "Resolving github.com (github.com)... 140.82.112.4\n",
-            "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
+            "Collecting padelpy\n",
+            "  Downloading padelpy-0.1.14-py2.py3-none-any.whl (20.9 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m20.9/20.9 MB\u001b[0m \u001b[31m27.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: padelpy\n",
+            "Successfully installed padelpy-0.1.14\n",
+            "--2023-05-12 05:24:48--  https://github.com/dataprofessor/padel/raw/main/fingerprints_xml.zip\n",
+            "Resolving github.com (github.com)... 140.82.112.3\n",
+            "Connecting to github.com (github.com)|140.82.112.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/dataprofessor/padel/main/fingerprints_xml.zip [following]\n",
-            "--2023-05-11 08:26:37--  https://raw.githubusercontent.com/dataprofessor/padel/main/fingerprints_xml.zip\n",
+            "--2023-05-12 05:24:48--  https://raw.githubusercontent.com/dataprofessor/padel/main/fingerprints_xml.zip\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 10871 (11K) [application/zip]\n",
-            "Saving to: ‘fingerprints_xml.zip.3’\n",
+            "Saving to: ‘fingerprints_xml.zip’\n",
             "\n",
             "fingerprints_xml.zi 100%[===================>]  10.62K  --.-KB/s    in 0s      \n",
             "\n",
-            "2023-05-11 08:26:37 (84.2 MB/s) - ‘fingerprints_xml.zip.3’ saved [10871/10871]\n",
+            "2023-05-12 05:24:48 (55.5 MB/s) - ‘fingerprints_xml.zip’ saved [10871/10871]\n",
             "\n",
             "Archive:  fingerprints_xml.zip\n",
-            "replace AtomPairs2DFingerprintCount.xml? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
             "  inflating: AtomPairs2DFingerprintCount.xml  \n",
-            "replace AtomPairs2DFingerprinter.xml? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
             "  inflating: AtomPairs2DFingerprinter.xml  \n",
-            "replace EStateFingerprinter.xml? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
             "  inflating: EStateFingerprinter.xml  \n",
-            "replace ExtendedFingerprinter.xml? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
             "  inflating: ExtendedFingerprinter.xml  \n",
-            "replace Fingerprinter.xml? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
             "  inflating: Fingerprinter.xml       \n",
-            "replace GraphOnlyFingerprinter.xml? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
             "  inflating: GraphOnlyFingerprinter.xml  \n",
-            "replace KlekotaRothFingerprintCount.xml? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
             "  inflating: KlekotaRothFingerprintCount.xml  \n",
-            "replace KlekotaRothFingerprinter.xml? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
             "  inflating: KlekotaRothFingerprinter.xml  \n",
-            "replace MACCSFingerprinter.xml? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
             "  inflating: MACCSFingerprinter.xml  \n",
-            "replace PubchemFingerprinter.xml? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
             "  inflating: PubchemFingerprinter.xml  \n",
-            "replace SubstructureFingerprintCount.xml? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
             "  inflating: SubstructureFingerprintCount.xml  \n",
-            "replace SubstructureFingerprinter.xml? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
             "  inflating: SubstructureFingerprinter.xml  \n"
           ]
         },
@@ -128,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "FPdC5kiR76pb",
         "colab": {
@@ -351,6 +343,7 @@
         "# Save the concatenated data to the 'molecule.smi' file\n",
         "df2.to_csv('molecule.smi', sep='\\t', index=False, header=False)\n",
         "\n",
+        "from padelpy import padeldescriptor\n",
         "\n",
         "padeldescriptor(\n",
         "    mol_dir='.',\n",
@@ -368,7 +361,7 @@
       "metadata": {
         "id": "FOlCfMxwkGr4"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -386,7 +379,7 @@
         },
         "outputId": "a1177045-5afa-494c-8f01-117d6fab4592"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -851,14 +844,14 @@
       "metadata": {
         "id": "R3-DhZ1nVKWq"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCERCIe7Hp9m5lqwNhXd/x",
+      "authorship_tag": "ABX9TyMASCQM2X1G88vqZqbuhkxH",
       "include_colab_link": true
     },
     "kernelspec": {
