--- a/Sol_ME_Predict.ipynb
+++ b/Sol_ME_Predict.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNohvrg7nIhRGEW3JfGOf1H",
+      "authorship_tag": "ABX9TyNSBtkd8rFodYnT9hdy5bGB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -293,6 +293,83 @@
       "metadata": {
         "id": "9la-fYfae0sk"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title If No CID available: Add SMILE for both Drug and Excipient and Run Both Cells (Shift + Enter)\n",
+        "#%%capture\n",
+        "!pip install pubchempy\n",
+        "!pip install padelpy\n",
+        "from padelpy import from_smiles\n",
+        "import tensorflow as tf\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import io\n",
+        "from tensorflow import keras\n",
+        "import pubchempy as pcp\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from keras.models import load_model\n",
+        "import time as tm\n",
+        "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
+        "gdd.download_file_from_google_drive(file_id='1TdaGJou2sS3_FgW5oxLEDUiKIyfjsQ83',\n",
+        "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
+        "                                   unzip=False)\n",
+        "#Load Model\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
+        "\n",
+        "Drug_SMILE = \"C1CO1.C(C(CO)O)O\" #@param {type:\"string\"}\n",
+        "Excipient_SMILE = \"COC1=C(C=CC(=C1)C=O)O\" #@param {type:\"string\"}\n",
+        "LogP_of_Drug =  11.3#@param {type:\"number\"}\n",
+        "LogP_of_Excipient =  2#@param {type:\"number\"}\n",
+        "MolWt_of_Drug =  11.3#@param {type:\"number\"}\n",
+        "MolWt_of_Excipient =  2#@param {type:\"number\"}\n",
+        "\n",
+        "#LOGP of DRUG AND CARRIER\n",
+        "\n",
+        "logp_D = LogP_of_Drug/100\n",
+        "\n",
+        "logp_C = LogP_of_Excipient/100\n",
+        "\n",
+        "#Mol.Wt of Drug and Carrier\n",
+        "MolWt_of_Drug = MolWt_of_Drug/1000\n",
+        "MolWt_of_Excipient =  MolWt_of_Excipient/1000\n",
+        "\n",
+        "CID_D = from_smiles(Drug_SMILE, fingerprints=True, descriptors=False)\n",
+        "CID_E = from_smiles(Excipient_SMILE, fingerprints=True, descriptors=False)\n",
+        "\n",
+        "FPD = list(CID_D.values())\n",
+        "FPE = list(CID_E.values())\n",
+        "\n",
+        "List1 = [MolWt_of_Drug, MolWt_of_Excipient, logp_D, logp_C]\n",
+        "\n",
+        "List2 = list(FPD)\n",
+        "List3 = list(FPE)\n",
+        "List = List1 + List2 + List3\n",
+        "\n",
+        "import pandas as pd\n",
+        "t = pd.DataFrame(np.array(List).reshape(-1,len(List)))\n",
+        "\n",
+        "#@title RUN FOR PREDICTION\n",
+        "\n",
+        "\n",
+        "dataset1 = t.values\n",
+        "t.dtype = int\n",
+        "X_Predict = (dataset1[:,0:1766].astype(float))\n",
+        "#print(X_Predict)\n",
+        "#print(X_Predict.shape)\n",
+        "#print(X_Predict.dtype)\n",
+        "\n",
+        "Y_prediction = model.predict(X_Predict)\n",
+        "\n",
+        "print(Y_prediction, \"mg/ml\")"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "UDIVgqoTwWJ9"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
