--- a/Sol_ME_Predict.ipynb
+++ b/Sol_ME_Predict.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSBtkd8rFodYnT9hdy5bGB",
+      "authorship_tag": "ABX9TyMrBksOYcoOh0Acjp7Ays2I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Insert PubChem Fingerprint of Drug and Carrier (Oil, Surfactant, Cosurfactant)\n",
+        "#@title Insert PubChem CID of Drug and Carrier (Oil, Surfactant, Cosurfactant)\n",
         "!pip install pubchempy\n",
         "import tensorflow as tf\n",
         "import pandas as pd\n",
@@ -121,7 +121,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Insert PubChem Fingerprint of Drug and Carrier (Oil, Surfactant, Cosurfactant)\n",
+        "#@title Insert PubChem CID of Drug and Carrier (Oil, Surfactant, Cosurfactant)\n",
         "!pip install pubchempy\n",
         "import tensorflow as tf\n",
         "import pandas as pd\n",
