--- a/Sol_ME_Predict.ipynb
+++ b/Sol_ME_Predict.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrBksOYcoOh0Acjp7Ays2I",
+      "authorship_tag": "ABX9TyOW5J/mGgTXb/Cy7xsHN+7F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
         "\n",
         "\n",
         "Drug_CID =  24872560#@param {type:\"number\"}\n",
-        "Excipient_CID =  3314#@param {type:\"number\"}\n",
+        "Excipient_CID =  121494022#@param {type:\"number\"}\n",
         "\n",
         "#LOGP of DRUG AND CARRIER\n",
         "logp_D = pcp.Compound.from_cid(Drug_CID)\n",
@@ -319,7 +319,7 @@
         "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
         "\n",
         "Drug_SMILE = \"C1CO1.C(C(CO)O)O\" #@param {type:\"string\"}\n",
-        "Excipient_SMILE = \"COC1=C(C=CC(=C1)C=O)O\" #@param {type:\"string\"}\n",
+        "Excipient_SMILE = \"COC1=C(C=CC(=C1)C=CC(=O)O)O\" #@param {type:\"string\"}\n",
         "LogP_of_Drug =  11.3#@param {type:\"number\"}\n",
         "LogP_of_Excipient =  2#@param {type:\"number\"}\n",
         "MolWt_of_Drug =  11.3#@param {type:\"number\"}\n",
@@ -370,6 +370,85 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title For Multiple SMILES Prediction upload Predict_SMILE.xlsx and (Shift + Enter)\n",
+        "\n",
+        "#%%capture\n",
+        "\n",
+        "!pip install pubchempy\n",
+        "!pip install padelpy\n",
+        "from padelpy import from_smiles\n",
+        "import tensorflow as tf\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import io\n",
+        "from tensorflow import keras\n",
+        "import pubchempy as pcp\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from keras.models import load_model\n",
+        "import time as tm\n",
+        "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
+        "gdd.download_file_from_google_drive(file_id='1TdaGJou2sS3_FgW5oxLEDUiKIyfjsQ83',\n",
+        "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
+        "                                   unzip=False)\n",
+        "#Load Model\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile=True)\n",
+        "\n",
+        "# Load input data from Excel\n",
+        "input_file_path = '/content/Predict_SMILE.xlsx'\n",
+        "data = pd.read_excel(input_file_path)\n",
+        "\n",
+        "# Preprocess the data\n",
+        "def preprocess_data(row):\n",
+        "    Drug_SMILE = row['Drug_SMILE']\n",
+        "    Excipient_SMILE = row['Excipient_SMILE']\n",
+        "    LogP_of_Drug = row['LogP_of_Drug'] / 100\n",
+        "    LogP_of_Excipient = row['LogP_of_Excipient'] / 100\n",
+        "    MolWt_of_Drug = row['MolWt_of_Drug'] / 1000\n",
+        "    MolWt_of_Excipient = row['MolWt_of_Excipient'] / 1000\n",
+        "\n",
+        "    CID_D = from_smiles(Drug_SMILE, fingerprints=True, descriptors=False)\n",
+        "    CID_E = from_smiles(Excipient_SMILE, fingerprints=True, descriptors=False)\n",
+        "\n",
+        "    FPD = list(CID_D.values())\n",
+        "    FPE = list(CID_E.values())\n",
+        "\n",
+        "    List1 = [MolWt_of_Drug, MolWt_of_Excipient, LogP_of_Drug, LogP_of_Excipient]\n",
+        "\n",
+        "    List2 = list(FPD)\n",
+        "    List3 = list(FPE)\n",
+        "    List = List1 + List2 + List3\n",
+        "\n",
+        "    return List\n",
+        "\n",
+        "preprocessed_data = data.apply(preprocess_data, axis=1)\n",
+        "X_Predict = np.array(preprocessed_data.tolist())\n",
+        "\n",
+        "# Perform predictions\n",
+        "Y_prediction = model.predict(X_Predict)\n",
+        "\n",
+        "# Print the predictions\n",
+        "for i, prediction in enumerate(Y_prediction):\n",
+        "    print(f\"Prediction for instance {i+1}: {prediction[0]} mg/ml\")\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "W9TNj4FXp9EO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For Downloading Predict_SMILE.xlsx [CLICK HERE](https://github.com/Swayamprakashpatel/Sol_ME/raw/main/Predict_SMILE.xlsx)"
+      ],
+      "metadata": {
+        "id": "QDmic4xdvS42"
+      }
     }
   ]
 }
