--- a/Sol_ME_Predict.ipynb
+++ b/Sol_ME_Predict.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOW5J/mGgTXb/Cy7xsHN+7F",
+      "authorship_tag": "ABX9TyMIUtFWIApVV3Ea7WEn8xHO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -430,9 +430,16 @@
         "# Perform predictions\n",
         "Y_prediction = model.predict(X_Predict)\n",
         "\n",
-        "# Print the predictions\n",
-        "for i, prediction in enumerate(Y_prediction):\n",
-        "    print(f\"Prediction for instance {i+1}: {prediction[0]} mg/ml\")\n"
+        "# Add predictions to the DataFrame\n",
+        "data['Prediction'] = Y_prediction\n",
+        "\n",
+        "# Save the results to an Excel file\n",
+        "output_file_path = 'Predict_SMILE_Result.xlsx'\n",
+        "data.to_excel(output_file_path, index=False)\n",
+        "\n",
+        "# Provide a download link for the user\n",
+        "from google.colab import files\n",
+        "files.download(output_file_path)"
       ],
       "metadata": {
         "cellView": "form",
